--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
+p_blondeau_user:
+    resource: "@PBlondeauUserBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 p_blondeau_slide_show:
     resource: "@PBlondeauSlideShowBundle/Controller/"
     type:     annotation
@@ -39,3 +44,15 @@ p_blondeau_common:
     type:     annotation
     prefix:   /
 
+
+
+fos_user_security:
+    resource: "@FOSUserBundle/Resources/config/routing/security.xml"
+
+fos_user_profile:
+    resource: "@FOSUserBundle/Resources/config/routing/profile.xml"
+    prefix: /profile
+
+fos_user_change_password:
+    resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
+    prefix: /profile
