Ignore web/uploads sub files Add displayog exhibitions with pagination on public display

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 /web/bundles/
 /web/uploads/slideshow/*
+/web/uploads/exhibitions/*
+/web/uploads/albums/*
+/web/uploads/press/*
 /app/bootstrap.php.cache
 /app/cache/*
 /app/config/parameters.yml
