Working on display public list of news

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /web/uploads/exhibitions/*
 /web/uploads/albums/*
 /web/uploads/press/*
+/web/upload/news/*
 /app/bootstrap.php.cache
 /app/cache/*
 /app/config/parameters.yml
