--- a/.travis.yml
+++ b/.travis.yml
@@ -5,18 +5,8 @@ php:
   - 5.5
   - 5.6
 
-install:
-  - composer self-update && composer --version
-  - composer install --prefer-dist
+before_script:
+  - cp app/config/parameters.yml.dist app/config/parameters.yml
+  - composer install
 
-# cache vendor dirs
-cache:
-  directories:
-    - vendor
-
-# faster builds on new travis setup not using sudo
-sudo: false
-
-script:
-  - phpunit --coverage-clover=coverage.clover
-  - php bin/limedocs generate src
+script: phpunit -c app/
