--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
 php:
     - 5.5
 
+install:
+  - composer self-update && composer --version
+  - composer install --prefer-dist
+
 before_script:
   - cp app/config/parameters.yml.travis app/config/parameters.yml
-  - composer install
   - php app/console doctrine:database:create --env=test
   - php app/console doctrine:schema:create --env=test
   - php app/console doctrine:fixtures:load -n --env=test
