--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,24 @@
+language: php
+
 php:
+    - 5.4
     - 5.5
+    - 5.6
+
+matrix:
+    fast_finish: true
 
 install:
-  - composer self-update && composer --version
-  - composer install --prefer-dist
+    - composer self-update && composer --version
+    - composer install --prefer-dist
+
+
 
 before_script:
-  - cp app/config/parameters.yml.travis app/config/parameters.yml
-  - php app/console doctrine:database:create --env=test
-  - php app/console doctrine:schema:create --env=test
-  - php app/console doctrine:fixtures:load -n --env=test
+    - cp app/config/parameters.yml.travis app/config/parameters.yml
+    - php app/console doctrine:database:create --env=test
+    - php app/console doctrine:schema:create --env=test
+    - php app/console doctrine:fixtures:load -n --env=test
 
 script:
-  - phpunit -c app
+    - phpunit -c app
