--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,7 @@ before_script:
 
 script:
     - phpunit -c app
+
+after_script:
+    - wget https://scrutinizer-ci.com/ocular.phar
+    - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
