--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -5,29 +5,19 @@ before_commands:
     - 'composer install --dev'
 
 tools:
+    external_code_coverage: true
+    php_mess_detector: true
+    sensiolabs_security_checker: true
+    php_pdepend: true
+    php_loc:
+        enabled: true
     php_cs_fixer:
         enabled: true
         config: { level: psr2 }
-
-    php_mess_detector: true
-
     php_cpd:
         enabled: true
-
     php_analyzer:
         enabled: true
-
-    php_pdepend:
-        enabled: true
-
-    sensiolabs_security_checker: true
-
-    php_loc:
-        enabled: true
-
-    external_code_coverage:
-        timeout: 600    # Timeout in seconds.
-
     php_code_sniffer:
         enabled: true
         config:
