--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_script:
     - php app/console doctrine:schema:create --env=test
 
 script:
-    - phpunit -c app
+    - phpunit -c app --coverage-clover=coverage.clover
 
 after_script:
     - wget https://scrutinizer-ci.com/ocular.phar
