--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ before_script:
     - cp app/config/parameters.yml.travis app/config/parameters.yml
     - php app/console doctrine:database:create --env=test
     - php app/console doctrine:schema:create --env=test
+    - php app/console doctrine:fixtures:load
 
 script:
     - phpunit -c app --coverage-clover=coverage.clover
