--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "hautelook/alice-bundle": "0.1.*"
     },
     "require-dev": {
+        "codeclimate/php-test-reporter": "dev-master",
         "sensio/generator-bundle": "~2.3"
     },
     "scripts": {
