--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -31,6 +31,8 @@ twig:
     form:
         resources:
             - :theme:form.html.twig
+    globals:
+        mailer_recipient: '%mailer_recipient%'
 
 # Assetic Configuration
 assetic:
@@ -65,11 +67,13 @@ doctrine:
 
 # Swiftmailer Configuration
 swiftmailer:
-    transport: "%mailer_transport%"
-    host:      "%mailer_host%"
-    username:  "%mailer_user%"
-    password:  "%mailer_password%"
-    spool:     { type: memory }
+    transport:  %mailer_transport%
+    host:       %mailer_host%
+    encryption: %mailer_encryption%
+    port:       %mailer_port%
+    username:   %mailer_user%
+    password:   %mailer_password%
+    delivery_address: %mailer_dev_recipient%
 
 services:
     twig.extension.text:
