--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -8,8 +8,12 @@ parameters:
 
     mailer_transport:  smtp
     mailer_host:       127.0.0.1
+    mailer_port:       ~
+    mailer_encryption: ~
     mailer_user:       ~
     mailer_password:   ~
+    mailer_dev_recipient:   ~
+    mailer_recipient:       ~
 
     locale:            en
     secret:            ThisTokenIsNotSoSecretChangeIt
