--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "coresphere/console-bundle": "dev-master",
         "doctrine/data-fixtures": "dev-master",
         "doctrine/doctrine-fixtures-bundle": "2.2.*",
-        "hautelook/alice-bundle": "0.1.*"
+        "hautelook/alice-bundle": "0.1.*",
+        "oneup/uploader-bundle": "~1.3"
     },
     "require-dev": {
         "codeclimate/php-test-reporter": "dev-master",
